fix column margin on mobile

--- a/style.css
+++ b/style.css
@@ -1202,7 +1202,9 @@ li.comment {
 	.sidebar-primary,
 	.footer-widgets .widget-area,
 	.one-third.tablet-one-half,
+	.one-third.first.tablet-one-half,
 	.one-fourth.tablet-one-half,
+	.one-fourth.first.tablet-one-half,
 	.one-third.tablet-one-half.tablet-first,
 	.one-third.first.tablet-one-half.tablet-first,
 	.one-fourth.tablet-one-half.tablet-first,
